5.3.5 -> 5.3.6:

5.3.4 -> 5.3.5:
    - jbj: release 5.3.5.
    - jbj: stub-in a disabler for "FILE ACID".
    - jbj: i18n: update po files (Translation Project).
    - jbj: beecrypt: fix: polluted builds due to my brain fart. revert.
    - jbj: popt: permit builds with --with-popt=internal all over again. todo++.
    - jbj: tests: fix: eliminate the need to jump start "make check"
	by copy macros from within tree to /usr/lib/rpm.
    - jbj: tests: lose all the *.spec build peculier macros just added.
    - proyvind: add gem_helper.rb and it's corresponding macros %gem_unpack,
	%gem_build & gem_install for simplifying & streamlining ruby gem
	packaging.
    - proyvind: add cmake macros from fedora/mandriva.
    - proyvind: add tcl macros from mandriva.
    - proyvind: add ruby macros from mandriva.
    - proyvind: add macros from mandriva that's fairly generic enough to
	possibly be of use to others, in mandriva/macros.
    - jbj: spewage: use RPMTAG_SHA1HEADER as the primary retrieval key.
    - jbj: rpmpopt: fix: permit popt aliases to be used w "make check".
    - jbj: pgp: add a 2nd parameter to pgpDigNew to generate a keypair.
    - jbj: rpmbc: refactor rpmbcExport{Pubkey,Signature} out of rpmbuild code.
    - jbj: mongo: add --json to spew document structured metadata in JSON.
    - jbj: mongo: add --qf templates for primary/filelists/other imports.
    - jbj: spewage: add :jsonescape header format extension.
    - jbj: db: specify only db-5.1.19 external for building, remove the cruft.
    - jbj: tests: resurrect the "check-ACID" target using external db51_utils.
    - jbj: db: build against external db-5.1.19 using --with-db/--with-dbsql.
    - jbj: rpmlio: disable for now, needs --with-db=internal.
    - jbj: db_tool: disable for now, needs --with-db=internal.
    - jbj: db: target db-5.1.19 using --with-db=external.
    - proyvind: rpm46compat: mostly(?) fix rpmtd iterator
    - jbj: add Fadvise wrapper for posix_dadvise(2).